--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,5 +57,15 @@
         android:id="@+id/textView6"
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        />
+
+    <com.aidlab.example.ChartView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chartView"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
